fix: token responses
